Fixed spacing on the chat page.

--- a/website/styles/chat.css
+++ b/website/styles/chat.css
@@ -6,7 +6,7 @@
     /*border: solid #845663;*/
     width: 80%;
     height: 500px;
-    margin: 10px auto;
+    margin: 20px auto;
     background-color: white;
     vertical-align: bottom;
 }
@@ -24,21 +24,30 @@
     width: 60px;
 
 }
+.chat-message {
+    width: 100%;
+    height: 40px;
+    padding-top: 10px;
+}
+
+.chat-message-self, .chat-message-other {
+    border-radius: 20px;
+    padding: 10px 12px;
+    min-width: 10%;
+    max-width: 45%;
+}
 
 .chat-message-self {
     text-align: right;
     float: right;
-    margin: 10px;
-    background-color: aqua;
-    padding: 10px;
-    border-radius: 10px;
+    margin-right: 10px;
+    background-color: darkgreen;
+    color: white;
 }
 
 .chat-message-other {
     text-align: left;
     float: left;
-    margin: 10px;
+    margin-left: 10px;
     background-color: aquamarine;
-    padding: 10px;
-    border-radius: 10px;
 }
