--- a/website/styles/main.css
+++ b/website/styles/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 .content {
-    margin-top: 80px;
+    margin-top: 95px;
 }
 
 ::selection {
